add history search activity

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -134,19 +134,35 @@
         <string name="xemgiaithich">Xem giải</string>
         <string name="share">Chia sẻ</string>
 
-        <string name="see_more_searches">See More Searches</string>
-        <string name="ic_search_history">Search History</string>
-        <string name="ask_snapsolve">Ask SnapSolve anything</string>
-        <string name="type_question">Type your question</string>
-        <string name="utilities">Utilities</string>
+        <!-- Add these strings to strings.xml -->
+        <string name="translate">Dịch</string>
+        <string name="type_your_text">Nhập văn bản...</string>
+        <string name="translation_placeholder">Bản dịch xuất hiện tại đây...</string>
+        <string name="translation_label">Dịch...</string>
+        <string name="copy_translation">Sao chép</string>
+        <string name="speak_translation">Phát âm</string>
+        <string name="swap_languages">Chuyển đổi</string>
+        <string name="select_language">Chọn ngôn ngữ</string>
+        <string name="translation_copied">Bản dịch đã được sao chép</string>
+        <string name="translation_failed">Dịch lỗi</string>
+        <string name="ask_ai_solution">Hỏi AI</string>
+        <string name="ai_solution">Bài giải</string>
+        <string name="premium_required">Yêu cầu tài khoản preminum</string>
+        <string name="premium_required_message">Tính năng chỉ dành cho người dùng Preminum. Nâng cấp tài khoản để sử dụng AI.</string>
+        <string name="upgrade_now">Nâng cấp</string>
+        <string name="maybe_later">Để sau</string>
+        <string name="generating_solution">Đang giải bài...</string>
+        <string name="see_more_searches">Xem tất cả lịch sử</string>
+        <string name="ic_search_history">Tìm kiếm lịch sử</string>
+        <string name="ask_snapsolve">Hỏi mọi thứ với SnapSolve</string>
+        <string name="type_question">Nhập câu hỏi</string>
+        <string name="utilities">Tiện ích</string>
         <string name="dictionary">Từ điển</string>
         <string name="calculator">Máy tính</string>
         <string name="entertainment">Giải trí</string>
-        <string name="today_missions">Today missions</string>
         <string name="watch_ad">Xem quảng cáo</string>
         <string name="ask_question">Đặt một câu hỏi</string>
         <string name="points">+ 10</string>
-        <string name="open_missions">Open missions board</string>
         <string name="tiktok">Tiktok</string>
         <string name="snap_solve_premium">Snap Solve Cao Cấp</string>
         <string name="unlimited_questions_and_answers">Không giới hạn câu hỏi và câu trả lời</string>
