--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="share_via_qr">Share via QR Code</string>
     <string name="scan_to_collaborate">Scan this QR code to collaborate on this note</string>
     <string name="share_link">Share Link</string>
-    <string name="newbutton">Mới</string>
+    <string name="newbutton">New</string>
     <string name="noteTitle">Notes</string>
     <string name="back">Back</string>
     <string name="nameOfScreenMenu">Menu</string>
